--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,13 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.5
+  geocoding: ^2.0.5
+  geolocator: ^9.0.2
+  fluttertoast: ^8.2.1
+  connectivity_plus: ^3.0.3
+  intl: ^0.18.1
+  country_calling_code_picker: ^2.0.1
+
   flutter: 
     sdk: flutter
 
